switched articles to writing

--- a/articles.html
+++ b/articles.html
@@ -57,14 +57,12 @@ Banner image is edited from a photograph by Stephen W. Oachs http://www.stepheno
       <p class="title">Tyler's Articles</p>
       <div class="article">
         <p>
-          Below is whatever I happen to write and feel like posting. Sometime's it's technical, sometimes it's not. Right now it's not much of anything, but I feel like it'll be a pretty mixed bag eventually.
+          Below is a kind of repository of information. Whenever I learn a neat new trick (for software development, usually web development), and feel like spending some time to solidify it, I'll write about it here so I can come back and use it later.
         </p>
 
         <h2>Contents</h2>
         <ul class="contents">
           <li category="web-tech"><a href="#animating-iron-pages">Animating &lt;iron-pages&gt; in Polymer 2.0 - July 11, 2017</a></li>
-          <li category="creative"><a href="#captain">Captain - August 15, 2017</a></li>
-          <li category="creative"><a href="#the-drive">The Drive - August 16, 2017</a></li>
         </ul>
       </div>
 
@@ -83,122 +81,6 @@ Banner image is edited from a photograph by Stephen W. Oachs http://www.stepheno
         </p>
       </div>
       -->
-
-      <div class="titleWrapper" category="creative">
-        <a class="imgLink" href="#the-drive"><img class="link" src="./graphics/icons/link.png"></a>
-        <p class="title" id="the-drive">The Drive</p>
-        <a href="/articles" class="linkBack">top ^</a>
-      </div>
-
-      <div class="article">
-        <p>
-          "I mean, maybe it's just me, you know? Maybe like, I'm the one with the problem. But I don't think so. Shit no one thinks so, I guess, but it's just so obvious to me, you know? I mean... I don't know. To me it's just like, if you're not happy then just explain that to me. I mean, Jesus. What's so hard about that? Like obviously you're fine with opening your mouth to fuckin scream in my face, so how about you just... I don't know, man... Because-"
-        </p>
-
-        <p>
-          He's still going on. And he has been for... oh god, only 10 minutes. This is gonna be a long drive. Don't these people work for tips? How the hell does he stay in business like this. Who in their right mind would show appreciation for hearing some zit-faced, smelly, no-neck loser vent about his shitty relationship. Maybe he's relying on me to pay him off just to shut his damn mouth.
-        </p>
-
-        <p>
-          "... and then it's another week, then another and another. Pretty soon I'm sure it's been a fuckin month since she even looked at me. Meanwhile, I'm just lyin there like holy shit, man. This has been the most relaxing couple weeks of my life. Fuck man, I don't need this. I don't know what the hell I did to piss off god so bad, but Jesus has he got it in for me. I can't remember the last time anything went my way, man. I mean anything. Just this morning I found out my fuckin gas meter is broken. Said I was half full and all the sudden my damn car just up and dies on me. And I got a passenger who starts flippin out. Like he's never been in a fuckin' car that ran out of gas before. Please. You ever stop and think how I feel man? Damn right I feel shitty, I don't wanna be runnin outta gas on a fuckin' freeway with some lunatic passenger breathin down my neck. You gotta make it that much worse? Is that just your sick idea of fun? Holy shit, man. I tell ya-"
-        </p>
-
-        <p>
-          I won't give him the satisfaction though. My morals are actually pretty strong. I'm not about to feed into this psycho's disgusting business model. You want to torture some poor guy who just wants to get from point-a to point-b? Is that really much more effective than like, I don't know, not being a total dick? He'd probably get more tips if he just kept his damn mouth shut. Ugh. I wonder if It would kill me to jump out of this moving car. I wonder if it would still be worth it if it would. This is torture. This is worse than torture. Maybe this guy could quit the cabby business and find some government work. Special ops, just stick him in a room with some foreign spy and they'll give up any secret you want. That'd be nice. No poor civilian would have to put up with his shit ever again. No wonder his girlfriend hates his guts. I've known him for all of 20 minutes and this ride would have been enough to undo years of good memories. God what would a good memory of this guy even be like? Him shutting his damn mouth for a minute?</p>
-        </p>
-
-        <p>
-          "... Yeah man, it's been rough. And I got bills, man, so many fuckin bills. You know cab drivin doesn't actually put that much bread on the table. Shit I gotta just fuckin rely on the grace of strangers. Some days I get no fuckin tips man, not a penny."
-        </p>
-
-        <p>
-          Oh god...
-        </p>
-
-        <p>
-          "And how am I supposed to live off that, man? You know I gotta pay for my own gas? Can you believe that shit? My fuckin job is to drive around all day for pennies while my scumbag boss laughs his ass off to the bank. Meanwhile half of everything I earn is going to just being able to keep up this shitty job. Fuck man. And my mom, bless her soul. Man she can't even see anymore. Cataracts."
-        </p>
-
-        <p>
-          Oh sweet Jesus...
-        </p>
-
-        <p>
-          "She can't afford to get em fixed, God knows I can't afford it. So I gotta take care of her, and I mean. I love my mother, don't you fuckin think for a second I don't. But it's hard man, it's real hard. It's like I'm either fuckin. Pissed at my girlfriend, worried sick about takin care of mom, or tryin to deal with the fact that one day, this shitty job is just not gonna fuckin cut it anymore. I mean can you imagine what's going through my head? What happens if there's a fuckin emergency, like if mom falls down the fuckin stairs. What the hell am I gonna do? I can barely afford food, man. Am I gonna have to choose between eating and, you know, keeping my own mother, my own fuckin mother who gave up everything for me. Fuckin fat lotta good that did, by the way. All the shit she went through to try and keep me happy and I end up a fuckin mess. And I can't even take care of her in her last fuckin years, man."
-        </p>
-
-        <p>
-          Is he crying? Holy shit what is wrong with this guy. Why the hell does he think I give a damn about his sob story. We get it, you fucked everything up, didn't think about the consequences. Oh no, now everything is shitty? Caught you off-guard? Deal with it. You think it's my problem now? I gotta give you some charity to make up for a whole wasted life? Fat chance, guy. You're the one who fucked everything up, now you either unfuck it or shut up and take the beating.
-        </p>
-
-        <p>
-          "... I just. Look man I know I've been talkin your ear off. That's not really fair"
-        </p>
-
-        <p>
-          Mhm.
-        </p>
-
-        <p>
-          "But it's just. Sometimes I feel like there's no one left in my life who I can really talk to, you know. Like..."
-        </p>
-
-        <p>
-          Oh god, is he going to start crying?
-        </p>
-
-        <p>
-          "Like my girlfriend, you know, she's so distant. And I know that's my fault but... I just.. I guess sometimes I really need to believe it's not. Like I've fucked up everything else and... maybe this is the last straw, you know? Like I just can't bring myself to believe that I'm that big a loser. And my mom. I can't bring this shit up with her. You know how bad she'd worry? Shit I might just give her a heart attack if I dumped all this on her."
-        </p>
-
-        <p>
-          "Hey could you do me a favor and shut up for the rest of the ride?"
-        </p>
-
-        <p>
-          And he did.
-        </p>
-
-        <p class="storyEnd">𓏈</p>
-      </div>
-
-      <div class="titleWrapper" category="creative">
-        <a class="imgLink" href="#captain"><img class="link" src="./graphics/icons/link.png"></a>
-        <p class="title" id="captain">Captain</p>
-        <a href="/articles" class="linkBack">top ^</a>
-      </div>
-
-      <div class="article" category="creative">
-        <p>
-          Even he doesn't know why he keeps staring out over the sea, it only hurts him. He'd never let it show, though. He puts on a good show for his men. The rocking of the ship rolls pens on his desk. It sets a dull metronome. He likes it. Quiet ticking sets a fragile backdrop. It suits his fancy. You would never think the captain a soft man, not unless you knew him. Not unless you could look in his eyes and truly see him. But there was no one around to see his face. Dirty, shaggy, wrinkled. In some ways, it's exactly as you'd expect. He was sea-worn, heavily weathered, grimy. That's how his men would pin him, at least. In need of repair. Maybe that's better. More right, at least. If you knew to look, you'd see the streak. A slightly muddled blemish on his mask. Exactly one, from his right eye to the corner of his mouth. Maybe tonight it would grow. Each day it could. The ship rocked rather violently. Maybe something spilled in the kitchen. Captain thought he could hear the cook shouting something nasty. Nasty by any standards. Any other time, that might bring a smile to Captain's face. He wasn't in the mood though, and thought he might never be. For now it was just him and the sea. Him and the horizon. And her.
-        </p>
-
-        <p>
-          It's a struggle to knock. She knows what's going on in there, and the last thing she'd want to do is make him scurry to hide his emotions. This is important though. Not for the crew, not for her, no. For him. Before she musters her courage, the door is opened. Captain looks her in the eye, and she looks back. His white hair, so clean and cared for. Most people would think it odd, such a weathered old sea-dog with hair that flows like a cotton sheet. Even more curious was its contrast with his beard. All gray and matted, more knotty than you'd think a lifetime of neglect could result in. More dirty than you'd think possible for a man who spends so much time away from dirt. It was strange, you could see the sharp outline of his jaw even through his thick coat, even through his years of age and stress. He was a beautiful man once. Some might say he still is, but in a different way. A deep man, with many lifetimes lived. His eyes did no work to betray his structure. Dark and violent as the storms that make him feel at home on the sea. Only a handful of people could see through it, perceive the man behind those eyes.
-        </p>
-
-        <p>
-          His streak grew last tonight, he really did need this. She stepped forward, her face in his, almost touching. He could feel her trembling. Fear? In part at least. She was certainly nervous. He was too, but to be sure he would never show it. His eyes went straight to her hands. They were clasped around a roll of paper. Old and moth-bitten. Indistinct from any other forgotten clipping. But he was expecting this, had been for years. He knew exactly what was about to happen. It almost made him shudder. Perhaps if the door were still closed, he would have.
-        </p>
-
-        <p>
-          "It's not too late." He could hear the telltale vibrato of her stutter. This was bad, she never got this nervous. "You and I can burn this, right here. Right now. It'll all be over. We can just forget about all this. Who's going to find us out here?" He smiled. They both knew her words were empty. It was sweet of her to try, though.
-        </p>
-
-        <p>
-          "One day, Mal. One day, you'll grow old and jaded. Just like your old man. You'll know what this means to me. You'll know why I died for this." She already knew. He already knew she knew. At this point, no words could have meaning. They were in each other's minds. A perfect understanding. What else could you expect from a lifetime together? These days, she was the only one he could open up to. He liked it that way though, and deep down, so did she. Mal opened her mouth, almost involuntarily. What did she even want to say? What was she even able to say? Nothing. There was no turning back at this point. No, they were past that point for a long time now. Mal turned and left. The door closes behind her.
-        </p>
-
-        <p>
-          Captain sat for a long time, gripping his roll of paper. His mind was made up, had been for years. He knew tonight was the night, but. But what? He was frightful. He often was. From day one, his gut turns at the slightest hint of danger. It kept him alert, alive. But today he no longer needed that. He calmed himself down, unraveled his scroll, and read. For the first time in his life, he refused to hold back his tears. As he read, the passages he finished were blotted away. The last memories he had of her, the only thing tying him to this world. Soon it would be gone forever. Soon. It was all over.
-        </p>
-
-        <p>
-          Mal hardly slept that night. She put it off as long as she could, but midday came and there was no longer any time to wait. It had to be now. The walk to the Captain's quarters is the longest it's ever been. She raises her fist, stops herself. She opens the door. Empty. Silently, she weeps. Bites her tongue. This can't happen anymore, she thinks. And she hides her tears. And she goes out to her men.
-        </p>
-
-        <p class="storyEnd">𓏈</p>
-      </div>
 
       <div class="titleWrapper" category="web-tech">
         <a class="imgLink" href="#animating-iron-pages"><img class="link" src="./graphics/icons/link.png"></a>
