--- a/writing.html
+++ b/writing.html
@@ -64,6 +64,7 @@ Banner image is edited from a photograph by Stephen W. Oachs http://www.stepheno
         <ul class="contents">
           <li category="creative"><a href="#captain">Captain - August 15, 2017</a></li>
           <li category="creative"><a href="#the-drive">The Drive - August 16, 2017</a></li>
+          <li category="creative"><a href="#the-drive">Like a Sick Dream - August 17, 2017</a></li>
         </ul>
       </div>
 
@@ -78,10 +79,42 @@ Banner image is edited from a photograph by Stephen W. Oachs http://www.stepheno
 
       <div class="article">
         <p>
-          INSERT CONTENT HERE 𓏈
+          INSERT CONTENT HERE
         </p>
+        <p class="storyEnd">𓏈</p>
       </div>
       -->
+
+      <div class="titleWrapper" category="creative">
+        <a class="imgLink" href="#like-sick-dream"><img class="link" src="./graphics/icons/link.png"></a>
+        <p class="title" id="like-sick-dream">Like a Sick Dream</p>
+        <a href="/articles" class="linkBack">top ^</a>
+      </div>
+
+      <div class="article">
+        <p>
+          It’s been staying dark a lot later. Days seem fuzzy, like they almost never happen. Maybe in the moment they’re clear. Maybe those hours are spent in crazed confusion. What’s so special about today? What makes it clear while the past weeks, months, years exist in solely in a haze? Moments of clarity, that’s the real torture. Realizing your own mind is against you. Looking back, horrifying yourself. Like waking up from a nightmare, in a cold sweat, and seconds later it starts all over. The fear, panic, paranoia. You can’t trust your senses, you can’t even trust your thoughts. It’s better, maybe, to forget all that. No, to never have made the memories. But in the moment, you’re not thinking about that. There’s no way you could be. If you thought you were dying. If you were sure, more than anything, that today was your last. That every detail of your surroundings seems so familiar, like you’ve experienced it a thousand times. At first you try to keep the thoughts out. They’re too dark. Too scary. Too sad. But they creep in, they always do. Soon enough you’re sure. This is what death is. Just repeating your last moments. Endlessly, in a loop. There’s no other way it’d all be so familiar. How many times have you felt this sinking feeling, and never remembered. How many times have you died?
+        </p>
+
+        <p>
+          At a certain point, you can’t fight it. Your body moves on its own. You scream, on the inside. You bring yourself to tears. But you can’t stop. Walking forward, playing the part. Repeating your steps, well-worn at this point. Walking solemnly the the next scene. You can’t fight it, it’s already happened. And now you have to do it over, and over. Endlessly, you’re trapped. What did I do? What’s so special about tonight? You always like to think you’ll die old and happy, or if you’re young at least you would see it coming. You’d know you were in danger, it wouldn’t come out of the blue. But tonight. It’s all so normal. Make a sandwich, eat it. Take a piss. Flush. So ordinary, what could have happened? What did I do to myself.
+        </p>
+
+        <p>
+          And then it hits you. I really am crazy. I kill myself tonight. I drive myself to it, so caught up in the moment. I know I die, but how? I can’t stand to watch. It’s too much. Every second that passes builds the anticipation. It has to happen soon. A minute passes. But how soon? An hour passes. What could happen? What’s going to happen to me? What did I do to myself. And then it hits you. You really are crazy. You kill yourself tonight. No I’d never do that. I love my life, it can’t be that. And then you go back to the start of the night. Performing your steps, unable to stop yourself. Because it already happened. Your body moves on its own. You scream, on the inside. You bring yourself to tears. But you can’t stop. Walking forward, playing the part. And then it hits you. I really am crazy. I kill myself tonight.
+        </p>
+
+        <p>
+          And that sure doesn’t help, saying it to yourself. Out loud. I kill myself tonight. Can you imagine, wanting nothing more than to live, but being convinced that tonight, you die. And you could have stopped it, at any time. But you didn’t. It already happened. All you can do now is watch. Everything you do, feels so right. You’d almost be proud, you’re repeating yourself perfectly. But how could you be. You’re scared. So scared. Trembling, physically. How would you even do it? There’s a knife in the kitchen, razors in the bathroom. Bags, windows. Maybe I jump, maybe I just wanted to fly. I wanted to feel the wind on my face, experience the beauty of being on top of the world. I thought I’d be fine. Invincible. I thought I’d soar, somehow. Impossibly. I just wanted to fly. I wanted to feel the wind on my face. To be like a bird, experience the beauty of being on top of the world. I thought I’d sore, somehow. Impossibly. I jump. I just want to fly. I really am crazy, after all.
+        </p>
+
+        <p>
+          It’s been staying dark a lot later. Days seem fuzzy, like they almost never happen. Maybe in the moment they’re clear. Maybe those hours are spent in crazed confusion. What’s so special about today?
+        </p>
+
+
+        <p class="storyEnd">𓏈</p>
+      </div>
 
       <div class="titleWrapper" category="creative">
         <a class="imgLink" href="#the-drive"><img class="link" src="./graphics/icons/link.png"></a>
