update writing page title

--- a/writing.html
+++ b/writing.html
@@ -1,6 +1,6 @@
 <!--
 This is the source code, it's not too special. If you came here wondering why I
-end my articles with a 𓏈 character, you're in luck.
+end my stories with a 𓏈 character, you're in luck.
 
 It's the unicode character for the Egyptian hieroglyph for a milk jug (W20 jrtjt).
 You may have noticed that the favicon for my website is also a milk jug, albeit a
@@ -20,7 +20,7 @@ Banner image is edited from a photograph by Stephen W. Oachs http://www.stepheno
     <meta lang="en-us">
     <meta name="viewport" content="width=device-width">
 
-    <title>Articles</title>
+    <title>1 Hour a Day</title>
 
     <link rel="icon" type="image/png" href="./graphics/favicon.png">
 
