forgot to insert title here

--- a/writing.html
+++ b/writing.html
@@ -88,7 +88,7 @@ Banner image is edited from a photograph by Stephen W. Oachs http://www.stepheno
 
       <div class="titleWrapper" category="creative">
         <a class="imgLink" href="#the-knight-and-princess"><img class="link" src="./graphics/icons/link.png"></a>
-        <p class="title" id="the-knight-and-princess">INSERT TITLE HERE</p>
+        <p class="title" id="the-knight-and-princess">The Knight and Princess</p>
         <a href="/articles" class="linkBack">top ^</a>
       </div>
 
