--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
     <body>
         <div class="page">
             <p>Tyler Leite</p>
-            <p style="margin-top: 0">
+            <p class="icons">
                 <a target="_blank" href="https://linkedin.com/in/tylerleite"><img class="icon" src="./graphics/icons/linkedin.png"/></a>
                 <a target="_blank" href="https://github.com/TylerLeite"><img class="icon" src="./graphics/icons/github.png"/></a>
                 <a target="_blank" href="https://soundcloud.com/tyler-leite"><img class="icon" src="./graphics/icons/soundcloud.png"/></a>
