--- a/home.html
+++ b/home.html
@@ -18,8 +18,8 @@
     </head>
     <body>
         <div class="page">
-            <p>Tyler Leite</p>
-            <p class="icons">
+            <p class="noselect">Tyler Leite</p>
+            <p class="icons noselect">
                 <a target="_blank" href="https://linkedin.com/in/tylerleite"><img class="icon" src="./graphics/icons/linkedin.png"/></a>
                 <a target="_blank" href="https://github.com/TylerLeite"><img class="icon" src="./graphics/icons/github.png"/></a>
                 <a target="_blank" href="https://soundcloud.com/tyler-leite"><img class="icon" src="./graphics/icons/soundcloud.png"/></a>
