--- a/writing.html
+++ b/writing.html
@@ -66,6 +66,7 @@ Banner image is edited from a photograph by Stephen W. Oachs http://www.stepheno
           <li category="creative"><a href="#the-drive">The Drive - August 16, 2017</a></li>
           <li category="creative"><a href="#like-sick-dream">Like a Sick Dream - August 17, 2017</a></li>
           <li category="creative"><a href="#the-knight-and-princess">The Knight and Princess - August 18, 2017</a></li>
+          <li category="creative"><a href="#quality-workmanship">100% Pure Quality Japanese Workmanship - August 23, 2017</a></li>
         </ul>
       </div>
 
@@ -85,6 +86,39 @@ Banner image is edited from a photograph by Stephen W. Oachs http://www.stepheno
         <p class="storyEnd">𓏈</p>
       </div>
       -->
+
+      <div class="titleWrapper" category="creative">
+        <a class="imgLink" href="#quality-workmanship"><img class="link" src="./graphics/icons/link.png"></a>
+        <p class="title" id="quality-workmanship">100% Pure Quality Japanese Workmanship</p>
+        <a href="/articles" class="linkBack">top ^</a>
+      </div>
+      <div class="article">
+        <p>
+          “Yeah, see that? 100% pure quality Japanese workmanship! Ain’t it the most beautiful thing you’ve ever seen. See how the sun bounces off the steel juuust right? Beautiful. This baby set me back a good hundred-thousand yen - that’s like nearly 5 grand, boys. And you know what? It’s worthy every penny. This baby, she’ll never dull. Never crack, never rust, never nothin. Good as the day I got it 10 years ago, and it’ll outlast me by a long shot. Yeah, you could say I love this little blade. More than I love any person, that’s for sure. Heh, maybe I’m crazy. I don’t know.”
+        </p>
+
+        <p>
+          There was no one else in the room. Never had been. There was also no knife. Never had been one of those either. Yeah, that man was certified nuts. But he enjoyed his life, at least. Some might say it’s sad, getting so much joy out of impressing a completely fabricated audience. Earning the respect and admiration of the imaginary and just loving it. Soaking in the love. Taking pride in fake possessions, not always a Japanese knife. Sometimes Mexican jewelry, or French designer clothes. Always something exotic, but something that made sense to him. Something he knew was believable. That’s the only way he could believe it, at least.
+        </p>
+
+        <p>
+          “You know this isn’t even my first one like it. Not that the other one broke, obviously. These things could cut through a mountain and not get a scratch on them. No, it was stolen from me. And worse still, it wasn’t just some trinket I’d bought myself, no offense, but it was something given to me by my grandfather. You see, my grandfather was a great man. Well, some called him great. Others terrible, others evil. He was a crime boss. That knife, he used it to inspire his men, and instill fear in his enemies. My father died in the drug war, otherwise he would have got that knife. But he died a man, and that’s all one can ask. Nothing else really matters in the end”
+        </p>
+
+        <p>
+          The man’s audience oohed and aahed. If anyone else could see, they would be incredulous to say the least. The crowd, so real to that man, were truly poor facsimiles of real people. Their reactions so fake, their gestures exaggerated. Almost like this man had never truly captivated anyone in his life, and he was going off his intuition, and what he’d seen in movies.
+        </p>
+
+        <p>
+          “And when I woke up, it was gone. All I had to show for it was a scar on my hand where I was holding it tight. As much as I love this baby, it’s no real replacement. One day, I’m gonna track down that thug with my knife, and I’m gonna take it right back. Don’t believe me? I already know where he is. I mean no offense guys, but why else would I be in this dump of a town.”. The man smirked. It was almost time.
+        </p>
+
+        <p>
+          I don’t want to explain the sad scene that followed the man’s speech. It’s too sad to go into the delusions that led a man to construct a crowd of admirers, let alone the paranoia that led him to distrust them, for no reason, such that his mind had to construct a new narrative. One that gave him a position of power despite his fear. Or more accurately, one that let him feel power to dismiss his fear. I don’t want to explain his shadow fight with imaginary men, brandishing his knife, impressing himself with his skill, fighting through the pain of a dozen battle wounds. I don’t want to think about how proud he was for holding his own against a dozen invisible thugs all by himself. And it’s not because that thought alone is so sad. It’s because he lost.
+        </p>
+
+        <p class="storyEnd">𓏈</p>
+      </div>
 
       <div class="titleWrapper" category="creative">
         <a class="imgLink" href="#the-knight-and-princess"><img class="link" src="./graphics/icons/link.png"></a>
