fix links back to top

--- a/writing.html
+++ b/writing.html
@@ -76,7 +76,7 @@ Banner image is edited from a photograph by Stephen W. Oachs http://www.stepheno
       <div class="titleWrapper" category="insert-category-here">
         <a class="imgLink" href="#insert-title-here"><img class="link" src="./graphics/icons/link.png"></a>
         <p class="title" id="insert-title-here">INSERT TITLE HERE</p>
-        <a href="/articles" class="linkBack">top ^</a>
+        <a href="/writing" class="linkBack">top ^</a>
       </div>
 
       <div class="article">
@@ -90,7 +90,7 @@ Banner image is edited from a photograph by Stephen W. Oachs http://www.stepheno
       <div class="titleWrapper" category="creative">
         <a class="imgLink" href="#quality-workmanship"><img class="link" src="./graphics/icons/link.png"></a>
         <p class="title" id="quality-workmanship">100% Pure Quality Japanese Workmanship</p>
-        <a href="/articles" class="linkBack">top ^</a>
+        <a href="/writing" class="linkBack">top ^</a>
       </div>
       <div class="article">
         <p>
@@ -123,7 +123,7 @@ Banner image is edited from a photograph by Stephen W. Oachs http://www.stepheno
       <div class="titleWrapper" category="creative">
         <a class="imgLink" href="#the-knight-and-princess"><img class="link" src="./graphics/icons/link.png"></a>
         <p class="title" id="the-knight-and-princess">The Knight and Princess</p>
-        <a href="/articles" class="linkBack">top ^</a>
+        <a href="/writing" class="linkBack">top ^</a>
       </div>
 
       <div class="article">
@@ -184,7 +184,7 @@ Banner image is edited from a photograph by Stephen W. Oachs http://www.stepheno
       <div class="titleWrapper" category="creative">
         <a class="imgLink" href="#like-sick-dream"><img class="link" src="./graphics/icons/link.png"></a>
         <p class="title" id="like-sick-dream">Like a Sick Dream</p>
-        <a href="/articles" class="linkBack">top ^</a>
+        <a href="/writing" class="linkBack">top ^</a>
       </div>
 
       <div class="article">
@@ -215,7 +215,7 @@ Banner image is edited from a photograph by Stephen W. Oachs http://www.stepheno
       <div class="titleWrapper" category="creative">
         <a class="imgLink" href="#the-drive"><img class="link" src="./graphics/icons/link.png"></a>
         <p class="title" id="the-drive">The Drive</p>
-        <a href="/articles" class="linkBack">top ^</a>
+        <a href="/writing" class="linkBack">top ^</a>
       </div>
 
       <div class="article">
@@ -293,7 +293,7 @@ Banner image is edited from a photograph by Stephen W. Oachs http://www.stepheno
       <div class="titleWrapper" category="creative">
         <a class="imgLink" href="#captain"><img class="link" src="./graphics/icons/link.png"></a>
         <p class="title" id="captain">Captain</p>
-        <a href="/articles" class="linkBack">top ^</a>
+        <a href="/writing" class="linkBack">top ^</a>
       </div>
 
       <div class="article" category="creative">
