add nbsp to toplink

--- a/writing.html
+++ b/writing.html
@@ -77,7 +77,7 @@ Banner image is edited from a photograph by Stephen W. Oachs http://www.stepheno
       <div class="titleWrapper" category="creative">
         <a class="imgLink" href="#insert-title-here"><img class="link" src="./graphics/icons/link.png"></a>
         <p class="title" id="insert-title-here">INSERT TITLE HERE</p>
-        <a href="/writing" class="linkBack">top ^</a>
+        <a href="/writing" class="linkBack">top&nbsp;^</a>
       </div>
 
       <div class="article">
@@ -91,7 +91,7 @@ Banner image is edited from a photograph by Stephen W. Oachs http://www.stepheno
       <div class="titleWrapper" category="creative">
         <a class="imgLink" href="#king-and-shoemaker"><img class="link" src="./graphics/icons/link.png"></a>
         <p class="title" id="king-and-shoemaker">The King and the Shoemaker</p>
-        <a href="/writing" class="linkBack">top ^</a>
+        <a href="/writing" class="linkBack">top&nbsp;^</a>
       </div>
 
       <div class="article">
@@ -149,7 +149,7 @@ Banner image is edited from a photograph by Stephen W. Oachs http://www.stepheno
       <div class="titleWrapper" category="creative">
         <a class="imgLink" href="#quality-workmanship"><img class="link" src="./graphics/icons/link.png"></a>
         <p class="title" id="quality-workmanship">100% Pure Quality Japanese Workmanship</p>
-        <a href="/writing" class="linkBack">top ^</a>
+        <a href="/writing" class="linkBack">top&nbsp;^</a>
       </div>
       <div class="article">
         <p>
@@ -182,7 +182,7 @@ Banner image is edited from a photograph by Stephen W. Oachs http://www.stepheno
       <div class="titleWrapper" category="creative">
         <a class="imgLink" href="#the-knight-and-princess"><img class="link" src="./graphics/icons/link.png"></a>
         <p class="title" id="the-knight-and-princess">The Knight and Princess</p>
-        <a href="/writing" class="linkBack">top ^</a>
+        <a href="/writing" class="linkBack">top&nbsp;^</a>
       </div>
 
       <div class="article">
@@ -243,7 +243,7 @@ Banner image is edited from a photograph by Stephen W. Oachs http://www.stepheno
       <div class="titleWrapper" category="creative">
         <a class="imgLink" href="#like-sick-dream"><img class="link" src="./graphics/icons/link.png"></a>
         <p class="title" id="like-sick-dream">Like a Sick Dream</p>
-        <a href="/writing" class="linkBack">top ^</a>
+        <a href="/writing" class="linkBack">top&nbsp;^</a>
       </div>
 
       <div class="article">
@@ -274,7 +274,7 @@ Banner image is edited from a photograph by Stephen W. Oachs http://www.stepheno
       <div class="titleWrapper" category="creative">
         <a class="imgLink" href="#the-drive"><img class="link" src="./graphics/icons/link.png"></a>
         <p class="title" id="the-drive">The Drive</p>
-        <a href="/writing" class="linkBack">top ^</a>
+        <a href="/writing" class="linkBack">top&nbsp;^</a>
       </div>
 
       <div class="article">
@@ -352,7 +352,7 @@ Banner image is edited from a photograph by Stephen W. Oachs http://www.stepheno
       <div class="titleWrapper" category="creative">
         <a class="imgLink" href="#captain"><img class="link" src="./graphics/icons/link.png"></a>
         <p class="title" id="captain">Captain</p>
-        <a href="/writing" class="linkBack">top ^</a>
+        <a href="/writing" class="linkBack">top&nbsp;^</a>
       </div>
 
       <div class="article" category="creative">
