--- a/writing.html
+++ b/writing.html
@@ -68,6 +68,7 @@ Banner image is edited from a photograph by Stephen W. Oachs http://www.stepheno
           <li category="creative"><a href="#the-knight-and-princess">The Knight and Princess - August 18, 2017</a></li>
           <li category="creative"><a href="#quality-workmanship">100% Pure Quality Japanese Workmanship - August 23, 2017</a></li>
           <li category="creative"><a href="#king-and-shoemaker">The King and the Shoemaker - August 25, 2017</a></li>
+          <li category="creative"><a href="#the-showdown">The Showdown - August 26, 2017</a></li>
         </ul>
       </div>
 
@@ -87,6 +88,60 @@ Banner image is edited from a photograph by Stephen W. Oachs http://www.stepheno
         <p class="storyEnd">𓏈</p>
       </div>
       -->
+
+      <div class="titleWrapper" category="creative">
+        <a class="imgLink" href="#the-showdown"><img class="link" src="./graphics/icons/link.png"></a>
+        <p class="title" id="the-showdown">The Showdown</p>
+        <a href="/writing" class="linkBack">top&nbsp;^</a>
+      </div>
+
+      <div class="article">
+        <p>
+          This wasn’t the kind of showdown you would’ve expected there to be a massive, cheering crowd to be present for. Just a friendly duel between two fanatics, each each other’s only worthy foe in the area. And there wasn’t. In fact, the arcade was quite empty. Despite being on the complete opposite side of the building, Amy the clerk could hear the distinct whoosh and clinks of the air hockey table. None of the bells and whistles that ordinarily polluted the soundspace were sounding off, no one’s attention would have been grabbed by them anyway. Amy reclined in her seat, feet on the counter. She wasn’t really allowed to have a seat, but management almost never came along, especially not at 2 p.m. on a school night. She often occupied herself with one of those wooden ring-and-rope puzzles. For the past few days she’d been stumped by a particularly hard one. She was close to a breakthrough though.
+        </p>
+
+        <p>
+          The game was neck-and-neck, as always. The boys often played to 51. They figured it was the only way to reduce variance enough to ensure that each game was won deservedly. You really had to be on top of your game that day to win by more than a few points. That or the other guy had to be in a major slump. The score was 40 - 12. Givi was crushing. Or was he? He could tell something was up with Mark, even before they started playing. They weren’t really close friends, all they had was air hockey. It was sort of a necessity for them to hang out. Not many people were into the game and those who were didn’t take it seriously. Well, maybe that’s to be expected. I mean, if you’ve ever been to an arcade, I’m sure you try and stop by the air hockey table. It’s fun to play a game or two, but it gets old fast, doesn’t it? Not for these guys. They see the game on a whole different level. It’s little intricacies pop out to them, the dozens of possible angles of attack, each with its own optimal defense. Trying to position your paddle just right, so you can get to all of those defenses as quickly as possible. Predicting your opponent’s moves since sometimes the puck whizzes by way too fast to defend on reaction. It was like an art, to see these two play.
+        </p>
+
+        <p>
+          “Hey are you ok?”
+        </p>
+
+        <p>
+          Mark just frowned and ignored him. 47 - 13. The rounds were going longer than usual. Mark was on the defensive. He wasn’t taking any risks, wasn’t going for his signature trick shots, his fast-and-loose style. Ordinarily, Givi’s only hope was to cover as many options as possibly and quickly counterattack on Mark’s open side after his shot. Their rounds were often only two or three hits. Today though, Mark was volleying, hitting back Givi’s shots pretty slowly, with tons of rebounds. You know the style, hitting the puck as hard as you can nearly perpendicular to the side, so it bounces back and forth dozens of times while it inches forward. It was a rookie shot, really easy to return with no chance of scoring in the goal. The air hockey version of a tennis lob. Something was definitely off.
+        </p>
+
+        <p>
+          “Hey if you’re not gonna put up a fight why am I even here. You’re just wasting my time and money”
+        </p>
+
+        <p>
+          Mark slammed his paddle into the table and looked up. He wasn’t crying, but he was close. Givi had no idea what was up with his friend, but he decided it would be cruel of him to leave. Obviously, for one reason or another, Mark needed this right now. They went back at it. 51 - 18. Game goes to Givi. They start again. 31 - 19, Mark was picking it back up. GIvi noticed some of the fire back in his opponent. But more importantly, he noticed how hard it was to score his points. Sure, he wasn’t getting scored on much, but it took him a few tries each round to get the puck even close to Mark’s goal. His defense was pretty impressive. Givi had never noticed that before. He figured if Mark played like this more often, but added in his fiery attacks… Well he didn’t think he stood much of a chance against a Mark that played like that. 33 - 27. That was more like it! An actual fight! GIvi could get behind this. Sure, it was frustrating, like playing against a brick wall. But it was really just another puzzle to solve. A new strategy he had to learn how to crack. This was what he loved about the game. 36 - 36. An amazing comeback. Givi couldn’t help but smile. 41 - 51. Mark closed it out.
+        </p>
+
+        <p>
+          “I don’t want you to let me win.” Givi was caught by surprise “I wasn’t! You played really well.” Mark looked down. “Don’t feel sorry for me. Just play the game.” Givi looked at Mark. He was going to say something but decided it wasn’t worth it. They started a new game. 0 - 12. 0 - 19. 1 - 21. Mark placed his paddle on the table and walked away. Givi was speechless.
+        </p>
+
+        <p>
+          “Heading home early?”
+        </p>
+
+        <p>
+          Mark stopped, but didn’t respond. He didn’t look up.
+        </p>
+
+        <p>
+          “It sounded like things got a little heated back there. I mean, I know you guys take that game pretty seriously, but… It seemed personal.” Mark looked up. He was crying “Oh shit, I’m sorry. Hey you don’t have to talk about it if you don’t want to.” Mark did want to talk about it, but he couldn’t find the words. He just stood there and stared at her. He wished he could talk, but his mouth was sealed shut. Even if it weren’t, his throat was. As were his lungs, his stomach. There was just no way for him to let it out. He felt an arm around him, then another.
+        </p>
+
+        <p>
+          “Hey Mark, we should get some lunch. You look like shit, but I bet a hotdog would help. We can go to Joe’s and get the footlongs. I really love that place.” Mark didn’t have many friends. He didn’t really think of Givi as one, more like an adversary. Acquaintance at best. But he was hungry, and he didn’t want to be alone. And he wanted to make a friend. He needed that.
+        </p>
+
+        <p class="storyEnd">𓏈</p>
+      </div>
 
       <div class="titleWrapper" category="creative">
         <a class="imgLink" href="#king-and-shoemaker"><img class="link" src="./graphics/icons/link.png"></a>
