--- a/writing.html
+++ b/writing.html
@@ -69,6 +69,7 @@ Banner image is edited from a photograph by Stephen W. Oachs http://www.stepheno
           <li category="creative"><a href="#quality-workmanship">100% Pure Quality Japanese Workmanship - August 23, 2017</a></li>
           <li category="creative"><a href="#king-and-shoemaker">The King and the Shoemaker - August 25, 2017</a></li>
           <li category="creative"><a href="#the-showdown">The Showdown - August 26, 2017</a></li>
+          <li category="creative"><a href="#when-different-isnt-so">When Different Isn't So - August 27, 2017</a></li>
         </ul>
       </div>
 
@@ -88,6 +89,40 @@ Banner image is edited from a photograph by Stephen W. Oachs http://www.stepheno
         <p class="storyEnd">𓏈</p>
       </div>
       -->
+
+      <div class="titleWrapper" category="creative">
+        <a class="imgLink" href="#when-different-isnt-so"><img class="link" src="./graphics/icons/link.png"></a>
+        <p class="title" id="when-different-isnt-so">When Different Isn't So</p>
+        <a href="/writing" class="linkBack">top&nbsp;^</a>
+      </div>
+
+      <div class="article">
+        <p>
+          It was approaching 8 at night, but the sun was only just starting to set. Summer days were getting longer each year, it seemed. And colder, which was even more disconcerting. The nights were still silent as ever, though. On the one hand, that was relaxing, peaceful. But on some nights, when paranoia was liable to creep in like unwanted vermin through cracks and holes in the walls, silence was more frightening than any sound could have been. The wandering mind is likely responsible for many of this world’s greatest innovations, but more often an unoccupied mind is akin to a small child playing in traffic. When the senses leave blank spaces to be filled, perhaps they will become occupied by great revelations. Perhaps, though, they instead are taken up by an endless stream of possible evils. Crazy, wild thoughts, fantasies. Nonetheless, very real in the moment, and terrifying as any true threat or spectre would have been.
+        </p>
+
+        <p>
+          She hadn’t had dinner yet, Ada. She had been too busy gathering wood. Not firewood, but wood for carving, though unbeknownst to her some of it would indeed end up being burned. In fact, if it weren’t for her staying out so late, gathering more wood than she knew she needed despite her better judgment… Well really it was because she needed to occupy her mind somehow. That and she figured too much was always better than too little. But if she hadn’t spent that time to gather that extra wood, and therefore had it to burn, she might have ended up dying for it. She needed the wood for dinner, actually. Her wooden spoon which she’d been using to turn her food in its pan had broken. It would take at least another day for her to carve another, but she didn’t need anything nice for now. Just a stick long enough that she wouldn’t get burned while cooking. Dinner tonight was fish. Trout, Ada thought, though she had no way of knowing if that was right. Nor did she really care, for that matter.
+        </p>
+
+        <p>
+          It was lonely up in the mountains. Not many visitors. Those who came were strangers. Lost strangers, though, and lost strangers are about as close to friends as strangers can get, especially in the middle of nowhere. People will be remarkably friendly in exchange for food and lodging in the best of conditions. Up here, where being lost and alone meant nearly certain death, you can imagine it only really exaggerated that willingness to connect. That need, even. “I don’t know what we would’ve done if, you know. So you just live out here, all by yourself? Must get lonely...” Always the same conversation with these hikers. Ada liked these questions though. Years of practice made them so easy to answer, so familiar they were like family. Sometimes she thought about that at night, how the closest thing she had to family was questions of pleasantry. That’s all she really wanted, though. Perhaps not all she needed, but who was to say.
+        </p>
+
+        <p>
+          The ceiling was constantly rotting. Sometimes, usually during a particularly violent snowstorm, a small portion of the roof would collapse. That was always miserable. Snow and freezing cold would come rushing in. It would be a scramble to patch up the hole as quickly as possible, followed by the whole next day spend cleaning up, creating a more stable fix, all that. If she wanted, Ada could check up on the state of her cabin as a matter of routine. Find any weak spots, reinforce them before they gave in. That thought had come to her many times. Every time the roof gave in, actually, but even more often it was just prompted by the howling of strong winds. She never would, though. Despite herself, she enjoyed the breaks from monotony.
+        </p>
+
+        <p>
+          Ada often ran out of food. The longest she went was three days. It was torturous. Most often she ate fish. There was a lake about a mile away, frozen over. But in terrible weather, when she couldn’t leave for days at a time, she had to rely on canned food from the town about 30 miles south. Getting there was a real pain, she had to hike. And she couldn’t exactly bring much back with her, since she had to carry it all back. Money was in short supply. She knew she only had enough cash to last her maybe another year or two. What then? Was it back to her old life? No, things would never be as they were before. A new life though, similar to her old one. That wouldn’t be so bad, she thought. But it would have to be something she was forced into. Until it became impossible to live up here alone, she would keep it up. Sometimes she wondered why she was so resolved in it. She never had a good answer.
+        </p>
+
+        <p>
+          It was only about 3 in the afternoon. The sun was already setting, though. Wintertime was a real pain, there was hardly a chance to get any real work done. Daylight burnt out so quickly. The winters were warming up though, at least that’s the way it seemed. Perhaps everything was normalizing. Soon there would be no light, no dark. Just go straight from sunrise to sunset, then back to sunrise. Back and forth, endlessly. Never fully day nor night. The temperature would stay constant, never fluctuate. There would be no more snowstorms, but also no clear weather. Just a constant, cool breeze. Ada wondered if she could get used to that, and decided she could. The world was already in a constant state of transition. Some consistency would be nice, for a change.
+        </p>
+
+        <p class="storyEnd">𓏈</p>
+      </div>
 
       <div class="titleWrapper" category="creative">
         <a class="imgLink" href="#the-showdown"><img class="link" src="./graphics/icons/link.png"></a>
